# robot-arm-controller

./: CITATION.cff  CMakeLists.txt  LICENSE  README.md  main.c  main.cpp
framework/motor/: mg996r.hpp
framework/states/: manual.cpp
framework/utils/: config.hpp  types.hpp
pi4/: spi_test.c
pi4/framework/: CMakeLists.txt  main.cpp
pi4/framework/states/: move_to_start.cpp  states.hpp
pi4/framework/utils/: config.cpp  context.cpp
pi4/grpc_server/: CMakeLists.txt  Dockerfile  README.md  compile_command.sh  helloworld.cc  robotarm_server.proto
pi4/spi_arm_client/motor/: CMakeLists.txt
pi4/spi_arm_client/tests/: test_state_table.hpp
pi4/spi_arm_client/utils/: conversion.hpp
src/: CMakeLists.txt  config.not_suported_json  main.cpp  mg996r.cpp  mg996r.hpp  servo_motor.cpp  servo_motor.hpp  smotor
src/motor/: CMakeLists.txt  conversion.hpp  mg996r.cpp  mg996r.hpp  motor.cpp  motor.hpp  motor_type.hpp  servo_motor.hpp
src/simulation/: CMakeLists.txt  bi.cpp  gpio.cpp  mock.hpp  pwm.cpp  sim_context_singleton.cpp  sim_context_singleton.hpp  spi.cpp  stdio.cpp
src/states/: CMakeLists.txt  calibration.cpp  idle.cpp  manual.cpp  states.hpp
src/tests/: test_motors.hpp  test_state_table.hpp
src/utils/: CMakeLists.txt  config.cpp  constants.hpp  context.cpp  context.hpp  context.not_supported_hpp  conversion.cpp  event_queue.cpp  event_queue.hpp  thread_safe_queue.not_supportedhpp  types.hpp
